// Copyright (c) The Libra Core Contributors
// SPDX-License-Identifier: Apache-2.0

syntax = "proto3";
option go_package = "libra/types";
package types;

message AccessPath {
  bytes address = 1;
  bytes path = 2;
}
